backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dream-journal-ingress
  namespace: dream-journal
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "dream-journal-ip"
    networking.gke.io/managed-certificates: "dream-journal-ssl-cert,dream-journal-admin-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
  labels:
    app.kubernetes.io/name: dream-journal
spec:
  rules:
  - host: admin.sensorium.dev
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 80
  - host: sensorium.dev
    http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 80
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-service
            port:
              number: 80
